# wmaker

./: README.md
Pixmaps/: Netscape.xpm  README  clip.xpm  dots.xpm
WindowMaker-0.17.5/: AUTHORS  BUGFORM  BUGS  ChangeLog  FAQ  INSTALL  Install  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  config.cache  config.status  configure  configure.in
WindowMaker-0.17.5/WINGs/: Makefile  Makefile.am  Makefile.in  README  TODO  WINGs.h  WINGsP.h  WUtil.h  error.c  findfile.c  fontl.c  hashtable.c  hashtable.h  memory.c  stuff.c  test.c  usleep.c  wapplication.c  wbrowser.c  wbutton.c  wcolor.c  wcolorwell.c  wevent.c  wfilepanel.c  wfont.c  wframe.c  widgets.c  wlabel.c  wlist.c  wmfile.c  wmisc.c  wmquery.c  wpanel.c  wpopupbutton.c  wscroller.c  wscrollview.c  wtextfield.c  wview.c  wwindow.c
WindowMaker-0.17.5/WINGs/Resources/: Makefile  Makefile.am  Makefile.in
WindowMaker-0.17.5/WindowMaker/: Makefile  Makefile.am  Makefile.in  README  menu  menu.fr  menu.ja  menu.ko
WindowMaker-0.17.5/WindowMaker/Backgrounds/: Makefile  Makefile.in
WindowMaker-0.17.5/WindowMaker/Defaults/: Makefile  Makefile.am  Makefile.in  WMState  WindowMaker.in
WindowMaker-0.17.5/WindowMaker/IconSets/: Makefile  Makefile.in
WindowMaker-0.17.5/WindowMaker/Icons/: Makefile  Makefile.am  Makefile.in  clip.tiff
WindowMaker-0.17.5/WindowMaker/Pixmaps/: Makefile  Makefile.in
WindowMaker-0.17.5/WindowMaker/Sounds/: Makefile  Makefile.in
WindowMaker-0.17.5/WindowMaker/Styles/: Black  Blue  BlueAluminum  Brown  Chumbo  Copper  DarkBlue  Fire  Food  Golden  Green  LightBlue  Makefile  Makefile.am  Makefile.in  Pastel  Pumpkin  Purple  Rainbow  Red  RednBlue  Traditional
WindowMaker-0.17.5/WindowMaker/Themes/: Default  Makefile  Makefile.am  Makefile.in  OpenStep  Pastel
WindowMaker-0.17.5/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
WindowMaker-0.17.5/libPropList/: .tcshrc  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.in  TODO  config.cache  config.status  configure  configure.in  filehandling.c  getting.c  lex.pl.c  memhandling.c  modifying.c  proplist.c  proplist.h  proplist.l  proplist_y.c  proplist_y.y
WindowMaker-0.17.5/libPropList/defaults/: Makefile.am  Makefile.in  defaults.1  defaults.c
WindowMaker-0.17.5/libPropList/gsdd/: Commands.c  Commands.h  Common.h  Main.c  Main.h  Makefile.am  Makefile.in  RunLoop.c  RunLoop.h
WindowMaker-0.17.5/libPropList/test/: Makefile  README  example.proplist  memtest.c
WindowMaker-0.17.5/libPropList/tools/: README  findleak.tcl
WindowMaker-0.17.5/misc/: README  asclock.tgz  xv-3.10a.diff
WindowMaker-0.17.5/po/: Makefile  Makefile.am  Makefile.in  README  cs.po  es.po  fr.po  ko.po  pt.po  ru.po
WindowMaker-0.17.5/src/: GNUstep.h  Makefile  Makefile.am  Makefile.in  WindowMaker.h  actions.c  actions.h  appicon.c  appicon.h  application.c  application.h  client.c  colormap.c  config.h  config.h.in  config.h.in~  def_pixmaps.h  defaults.c  defaults.h  dialog.c  dialog.h  dock.c  dock.h  event.c  framewin.c  framewin.h  funcs.h  icon.c  icon.h  keybind.h  list.c  main.c  menu.c  menu.h  misc.c  moveres.c  placement.c  properties.c  proplist.c  resources.c  (+24 more)
WindowMaker-0.17.5/test/: Makefile  Makefile.in
WindowMaker-0.17.5/util/: Makefile  Makefile.am  Makefile.in  README  convertstyle  dockit  geticonset.c  getstyle.c  seticons.c  setstyle.c  wdwrite.c  wmaker.inst.in  wmsetbg.c  wxcopy.c
WindowMaker-0.17.5/wmlib/: Makefile  Makefile.in  WMaker.h
WindowMaker-0.17.5/wrlib/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  ballot_box.xpm  context.c  convert.c  gradient.c  jpeg.c  load.c  misc.c  nxpm.c  ppm.c  raster.c  scale.c  test.c  testgrad.c  tiff.c  tile.xpm  view.c  wraster.h  xutil.c
WindowMaker-0.20.3/: Makefile  WINGs-flags  config.cache  config.status
WindowMaker-0.20.3/WINGs/: Makefile
WindowMaker-0.20.3/WINGs/Resources/: Makefile
WindowMaker-0.20.3/WPrefs.app/: Makefile
WindowMaker-0.20.3/WPrefs.app/po/: Makefile
WindowMaker-0.20.3/WPrefs.app/tiff/: Makefile
WindowMaker-0.20.3/WPrefs.app/xpm/: Makefile
WindowMaker-0.20.3/WindowMaker/: Makefile
WindowMaker-0.20.3/WindowMaker/Backgrounds/: Makefile
WindowMaker-0.20.3/WindowMaker/Defaults/: Makefile
WindowMaker-0.20.3/WindowMaker/IconSets/: Makefile
WindowMaker-0.20.3/WindowMaker/Icons/: Makefile
WindowMaker-0.20.3/WindowMaker/Pixmaps/: Makefile
WindowMaker-0.20.3/WindowMaker/Styles/: Makefile
WindowMaker-0.20.3/WindowMaker/Themes/: Makefile
WindowMaker-0.20.3/doc/: Makefile
WindowMaker-0.20.3/libPropList/: ChangeLog  Makefile  Makefile.am  config.cache  config.status  configure  configure.in  daemon.c  filehandling.c  getting.c  mkinstalldirs  proplist.c  proplist.h  proplist.l  proplist.tab.h  proplist_y.c  util.h
WindowMaker-0.20.3/po/: Makefile
WindowMaker-0.20.3/src/: Makefile  config.h  wconfig.h
WindowMaker-0.20.3/test/: Makefile
WindowMaker-0.20.3/util/: Makefile
WindowMaker-0.20.3/wmlib/: Makefile
WindowMaker-0.20.3/wrlib/: Makefile
pclock-bezier-0.10/: CHANGES  CREDITS  Makefile  README  README.bezier  TODO
pclock-bezier-0.10/XPM/: totd-05-24.xpm  ugly-yellow.xpm
pclock-bezier-0.10/demos/: totd-05-24  ugly-yellow
pclock-bezier-0.10/src/: Clock.c  Clock.h  Defaults.h  Graphics.c  Main.c  Makefile  PClock.h  Version.h  transform.c  transform.h
wmavgload-0.6.1/: INSTALL  Imakefile  Makefile  README  back_full_color.xpm  back_less_color.xpm  get_load.c  mask.xpm  wmavgload.c
wmeyes/: Makefile  wmeyes.c
wmload-0.9.2/: Makefile
wmtime.app/: BUGS  Imakefile  Makefile  wmtime-mask.xbm  wmtime-master.xpm  wmtime-master.xpm.original  wmtime.c
wmtime.app/languages/: id.lang
wmtimer/: CREDITS  INSTALL  README
wmtimer/wmtimer/: .wmtimer.c.swp  Makefile  wmtimer.c  wmtimer.xpm
wmwave/: Makefile  README  wmwave-master.xpm  wmwave.1  wmwave.c
wmwifi-0.6/: Makefile  config.status
wmwifi-0.6/src/: Makefile
wmwifi-0.6/src/.deps/: dockapp.P  wireless.P  wmwifi.P
