dnl Process this file with autoconf to produce a configure script.
AC_INIT(proplist.l)

AM_INIT_AUTOMAKE(libPropList, 0.8.2)


dnl Checks for programs.
AC_PROG_CC


dnl ARGH!! This is a pain. Automake will cause configure to abort if
dnl lex is not in the system, even though lex is not required by us.
dnl And if we use AC_PROG_LEX it will complain. 
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/file.h sys/time.h unistd.h crypt.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL

#AC_CHECK_FUNCS(gethostname gethostbyname gettimeofday mkdir rmdir select strstr socket)

if test "$HAVE_SOCKET" = ""; then
	AC_CHECK_LIB(socket, socket, XTRALIBS="$XTRALIBS -lsocket")
fi

if test "$HAVE_GETHOSTBYNAME" = ""; then
	AC_CHECK_LIB(nsl, gethostbyname, XTRALIBS="$XTRALIBS -lnsl")
fi

AC_CHECK_LIB(crypt, crypt, LIBCRYPT="-lcrypt", LIBCRYPT="")


AC_SUBST(LIBSOCK)
AC_SUBST(LIBCRYPT)
AC_SUBST(XTRALIBS)

AC_OUTPUT(Makefile)
#defaults/Makefile Makefile gsdd/Makefile)
